         Read Only Launchers. This feature requires AML 0.9.X
         AML creates the Category "Arcade (AML)" and places the exported launchers there.

WIP      [CORE] Utility to check artwork. Sometimes a JPG image is renamed as PNG, etc.
         Check that all artwork have correct file extensions, etc.

WIP      [CORE] Utility to scan and remove orphaned artwork.

WIP      [FAVOURITES] Change the way artwork is stored in Favourites, Launchers and
         Categories directories. Avoid using IDs in the artwork name so artwork can be reused.

WIP      [MULTIDISC] Edit multidisc ROMs. In general, improve the support for
         multidisc ROMs.

WIP      [MULTIDISC] Fix artwork support for mult-disc ROMs.
         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2628912#pid2628912

WIP      [MISC] Changes and suggestions propoed by Atsumori.
         See http://forum.kodi.tv/showthread.php?tid=287826&pid=2560843#pid2560843
         See http://forum.kodi.tv/showthread.php?tid=287826&pid=2586596#pid2586596

WIP      [MANUALS] Port the PDF manual reader from AML into AEL.

WIP      [ROM AUDIT] Separate the ROM Audit code from the Parent/Clone code.

WIP      [ROM AUDIT] Add an option to create a default Parent ROM for Redump DATs or NoIntro DATs
         with no PClone information.

WIP      [ROM AUDIT] Create a "fake" Parent/Clone list from filenames ala NARS (NARS Advanced ROM
         Sorting). In "Edit Launcher", "Audit ROMs / Launcher view mode" include a new option
         like "Create PClone DAT based on ROM filenames"

WIP      [ROM AUDIT] Options to generate the 1G1R parent list, like prefer ROMs from Europe,
         Japan or USA. This resembles what NARS No-Intro filtering does.

WIP      [SCRAPERS] Asset scrapers are disabled/not working for standalone launchers. Fix this.
         See https://github.com/Wintermute0110/plugin.program.advanced.emulator.launcher/issues/62
